# digital

./: .env.example  .gitignore  .prettierrc  Makefile  README.md  package.json  pyproject.toml  quasar.conf.js  tsconfig.json
backend/apps/api/article/: __init__.py  admin.py  apps.py  models.py  urls.py
backend/apps/api/article/migrations/: 0001_initial.py  0002_auto_20211112_1149.py  0003_auto_20211112_1157.py  0004_article_img.py  0005_rename_dont_show_the_post_article_dont_show_the_article.py  0006_auto_20211112_1548.py  0007_auto_20211112_1551.py  0008_alter_article_tag.py  0009_alter_tag_name.py
backend/apps/api/article/v1/: routers.py  serializers.py  views.py
backend/apps/api/auth/: admin.py  models.py
backend/apps/api/captcha_test/: __init__.py  admin.py  apps.py  urls.py
backend/apps/api/feedback/: admin.py  apps.py  models.py
backend/apps/api/project/: __init__.py  admin.py  apps.py  models.py  urls.py
backend/apps/core/api/: permissions.py  views.py
backend/apps/core/main/: urls.py
backend/config/: urls.py
backend/config/settings/base/: apps.py  environment.py
backend/config/settings/components/: __init__.py  ckeditor.py  paths.py  rest_framework.py
backend/config/settings/environments/: common.py  development.py  production.py
config/: Dockerfile  Dockerfile.dev
config/ansible/: docker.yml  server.yml
config/docker/: Jenkinsfile  default.conf  docker-compose.yml
config/server/: Jenkinsfile  gunicorn.service  nginx.conf  node.service  node.socket
private/: .gitignore
private/templates/admin/: base_site.html
src/: App.vue  index.template.html
src-ssr/: production-export.ts
src/@types/: index.d.ts
src/boot/: axios.ts
src/components/: ArticleCard.vue  Captcha.vue  CurvesBackground.vue  FeedbackForm.vue  PageTitle.vue  ProjectCard.vue  SocialLinks.vue  TeamCard.vue  TiltEffect.vue
src/css/: quasar.variables.sass
src/css/base/: _base.sass  _fonts.sass
src/css/components/: _article.sass  _curves-background.sass  _index.sass  _project-card.sass  _team-card.sass
src/css/layout/: _index.sass  _main-layout.sass  _second-layout.sass
src/css/pages/: _home.sass
src/hooks/: useAnimation.ts  useArticle.ts  useAuth.ts  useCaptcha.ts  useProject.ts  useTeam.ts
src/layouts/: Header.vue  MainLayout.vue  Menu.vue  SecondLayout.vue
src/pages/: Error.vue  Index.vue  Login.vue  Project.vue  Team.vue
src/pages/Article/: ArticleDetails.vue  ArticleList.vue
src/router/: routes.ts
(+34 files in other folders)
